--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -406,7 +406,7 @@ textarea {
 
 /* === PROFILE STYLES === */
 .profile-container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 0 20px 40px;
 }
@@ -490,7 +490,7 @@ textarea {
 .btn-refresh,
 .btn-logout,
 .btn-addjob,
-.btn-login {
+.btn-login, .btn-showJob {
   padding: 0.7rem 1.2rem;
   border-radius: 10px;
   border: none;
@@ -514,15 +514,13 @@ textarea {
   transform: translateY(-2px);
 }
 
-.btn-app,
-.btn-refresh {
+.btn-app,.btn-refresh, .btn-addjob, .btn-showJob {
   background-color: var(--soft-neutral);
   color: var(--secondary);
   border: 2px solid var(--primary);
 }
 
-.btn-app:hover,
-.btn-refresh:hover {
+.btn-app:hover,.btn-refresh:hover, .btn-addjob:hover, .btn-showJob:hover {
   background-color: var(--primary);
   color: var(--white);
   transform: translateY(-2px);
@@ -538,15 +536,6 @@ textarea {
   transform: translateY(-2px);
 }
 
-.btn-addjob {
-  background-color: var(--success);
-  color: var(--white);
-}
-
-.btn-addjob:hover {
-  background-color: #00a842;
-  transform: translateY(-2px);
-}
 
 .btn-login {
   background-color: var(--primary);
@@ -748,7 +737,7 @@ textarea {
 
 /* === JOB SEARCH === */
 .jobsearch {
-  max-width: 1000px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 20px;
 }
