--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -60,9 +60,16 @@ body {
 }
 
 .logo {
+  display: flex;
   font-size: 1.7rem;
   font-weight: 700;
   letter-spacing: 0.5px;
+  align-items: center;
+}
+
+.logo-img {
+  height: 40px;
+  margin-right: 10px;
 }
 
 .nav-buttons {
